# ai-commit-assistant

./: .gitignore  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.py
commitassist/: MANIFEST.in  README.md  hooks.py  main.py  pyproject.toml  setup.py  test.py
